--- a/notebooks/1_DataCleaning.ipynb
+++ b/notebooks/1_DataCleaning.ipynb
@@ -97,13 +97,34 @@
     "            line = re.sub(tagging_pattern, \"\", line).strip()\n",
     "            filtered_lines.append(line)\n",
     "\n",
-    "    # Regular expression to match WhatsApp message format\n",
-    "    pattern = r'(\\d{2}/\\d{2}/\\d{4}, \\d{2}:\\d{2}) - (.*?): (.*?)(?=\\n\\d{2}/\\d{2}/\\d{4}, \\d{2}:\\d{2} -|$)'\n",
+    "    # Regular expression to match both WhatsApp message formats (with and without am/pm)\n",
+    "    pattern = r'(\\d{2}/\\d{2}/\\d{2,4}, \\d{1,2}:\\d{2}(?:\\s?[ap]m)?) - (.*?): (.*?)(?=\\n\\d{2}/\\d{2}/\\d{2,4}, \\d{1,2}:\\d{2}(?:\\s?[ap]m)? -|$)'\n",
     "    content = '\\n'.join(filtered_lines)\n",
     "    messages = re.findall(pattern, content, re.DOTALL)\n",
     "\n",
     "    df = pd.DataFrame(messages, columns=['timestamp', 'sender', 'message'])\n",
-    "    df['timestamp'] = pd.to_datetime(df['timestamp'], format='%d/%m/%Y, %H:%M')\n",
+    "    \n",
+    "    # Parse timestamps handling both formats\n",
+    "    timestamps = []\n",
+    "    for ts in df['timestamp']:\n",
+    "        try:\n",
+    "            # Try 12-hour format with am/pm first\n",
+    "            if 'am' in ts.lower() or 'pm' in ts.lower():\n",
+    "                timestamp = pd.to_datetime(ts, format='%d/%m/%y, %I:%M %p')\n",
+    "            else:\n",
+    "                # Try 24-hour format\n",
+    "                timestamp = pd.to_datetime(ts, format='%d/%m/%Y, %H:%M')\n",
+    "        except:\n",
+    "            try:\n",
+    "                # If year is in 2-digit format without am/pm\n",
+    "                timestamp = pd.to_datetime(ts, format='%d/%m/%y, %H:%M')\n",
+    "            except:\n",
+    "                # Last resort fallback\n",
+    "                timestamp = pd.NaT\n",
+    "        timestamps.append(timestamp)\n",
+    "    \n",
+    "    df['timestamp'] = timestamps\n",
+    "        \n",
     "    return df"
    ]
   },
@@ -162,7 +183,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"../output/combined_text.txt\", \"w\") as f:\n",
+    "with open(\"../output/combined_text.txt\", \"w\", encoding=\"utf-8\") as f:\n",
     "    f.write(text_sequence)"
    ]
   }
