fix: parse timestamps using format='mixed' in pandas

--- a/notebooks/1_DataCleaning.ipynb
+++ b/notebooks/1_DataCleaning.ipynb
@@ -104,23 +104,14 @@
     "\n",
     "    df = pd.DataFrame(messages, columns=['timestamp', 'sender', 'message'])\n",
     "    \n",
-    "    # Parse timestamps handling both formats\n",
+    "    # Parse timestamps using format='mixed'\n",
     "    timestamps = []\n",
-    "    for ts in df['timestamp']:\n",
+    "    for timestamp in df['timestamp']:\n",
     "        try:\n",
-    "            # Try 12-hour format with am/pm first\n",
-    "            if 'am' in ts.lower() or 'pm' in ts.lower():\n",
-    "                timestamp = pd.to_datetime(ts, format='%d/%m/%y, %I:%M %p')\n",
-    "            else:\n",
-    "                # Try 24-hour format\n",
-    "                timestamp = pd.to_datetime(ts, format='%d/%m/%Y, %H:%M')\n",
-    "        except:\n",
-    "            try:\n",
-    "                # If year is in 2-digit format without am/pm\n",
-    "                timestamp = pd.to_datetime(ts, format='%d/%m/%y, %H:%M')\n",
-    "            except:\n",
-    "                # Last resort fallback\n",
-    "                timestamp = pd.NaT\n",
+    "            timestamp = pd.to_datetime(timestamp, format='mixed', dayfirst=True)\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error parsing timestamp '{timestamp}': {e}\")\n",
+    "            timestamp = pd.NaT\n",
     "        timestamps.append(timestamp)\n",
     "    \n",
     "    df['timestamp'] = timestamps\n",
