--- a/notebooks/1_DataCleaning.ipynb
+++ b/notebooks/1_DataCleaning.ipynb
@@ -63,7 +63,6 @@
     "import re\n",
     "import pandas as pd\n",
     "\n",
-    "\n",
     "def read_whatsapp_chat(file_path: str) -> pd.DataFrame:\n",
     "    # Define filtering patterns\n",
     "    encryption_message = \"Messages and calls are end-to-end encrypted. No one outside of this chat, not even WhatsApp, can read or listen to them. Tap to learn more.\"\n",
@@ -97,22 +96,32 @@
     "            line = re.sub(tagging_pattern, \"\", line).strip()\n",
     "            filtered_lines.append(line)\n",
     "\n",
-    "    # Regular expression to match both WhatsApp message formats (with and without am/pm)\n",
-    "    pattern = r'(\\d{2}/\\d{2}/\\d{2,4}, \\d{1,2}:\\d{2}(?:\\s?[ap]m)?) - (.*?): (.*?)(?=\\n\\d{2}/\\d{2}/\\d{2,4}, \\d{1,2}:\\d{2}(?:\\s?[ap]m)? -|$)'\n",
+    "    # Normalize content:\n",
+    "    # 1. Remove any square brackets around timestamps (for iOS exports)\n",
+    "    # 2. Replace narrow no-break space (used in iOS exports) with a regular space\n",
+    "    # 3. Remove Left-to-Right Mark (LRM) and Right-to-Left Mark (RTM) invisible characters\n",
     "    content = '\\n'.join(filtered_lines)\n",
+    "    content = content.replace('\\u202f', ' ')  # Replace narrow no-break space (iOS specific)\n",
+    "    content = content.replace('[', '').replace(']', '')  # Remove square brackets (iOS specific)\n",
+    "    content = content.replace('\\u200E', '').replace('\\u200F', '')  # Remove LRM and RTM characters\n",
+    "\n",
+    "    # Updated regular expression to match both iOS and Android WhatsApp formats\n",
+    "    # Now includes optional tilde (~) and handles extra spaces after the tilde\n",
+    "    pattern = r'(\\d{1,2}/\\d{1,2}/\\d{2,4}, \\d{1,2}:\\d{2}(?::\\d{2})?\\s?[APap][Mm])\\s?~?\\s?(.*?): (.*?)(?=\\n\\d{1,2}/\\d{1,2}/\\d{2,4}, \\d{1,2}:\\d{2}|$)'\n",
+    "\n",
     "    messages = re.findall(pattern, content, re.DOTALL)\n",
     "\n",
     "    df = pd.DataFrame(messages, columns=['timestamp', 'sender', 'message'])\n",
-    "    \n",
+    "\n",
     "    timestamps = []\n",
     "    for timestamp in df['timestamp']:\n",
     "        try:\n",
-    "            timestamp = pd.to_datetime(timestamp, format='mixed', dayfirst=True)\n",
+    "            timestamp = pd.to_datetime(timestamp, dayfirst=True, errors='coerce')\n",
     "        except Exception as e:\n",
     "            print(f\"Error parsing timestamp '{timestamp}': {e}\")\n",
     "            timestamp = pd.NaT\n",
     "        timestamps.append(timestamp)\n",
-    "    \n",
+    "\n",
     "    df['timestamp'] = timestamps\n",
     "    return df"
    ]
@@ -126,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,9 +164,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1345016"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "text_sequence = \"\"\n",
     "for file_name in all_chats.keys():\n",
@@ -168,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +199,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "vincent",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -193,7 +213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
