Fixed Regex for Pattern Matching + Dummy Data To Check Both Types
- Android + iOS Type Exports for WhatsApp
- Pattern Matching Regex Fix

--- a/notebooks/1_DataCleaning.ipynb
+++ b/notebooks/1_DataCleaning.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
     "\n",
     "    # Updated regular expression to match both iOS and Android WhatsApp formats\n",
     "    # Now includes optional tilde (~) and handles extra spaces after the tilde\n",
-    "    pattern = r'(\\d{1,2}/\\d{1,2}/\\d{2,4}, \\d{1,2}:\\d{2}(?::\\d{2})?\\s?[APap][Mm])\\s?~?\\s?(.*?): (.*?)(?=\\n\\d{1,2}/\\d{1,2}/\\d{2,4}, \\d{1,2}:\\d{2}|$)'\n",
+    "    pattern = r'(\\d{1,2}/\\d{1,2}/\\d{2,4}, \\d{1,2}:\\d{2}(?::\\d{2})?(?:\\s?[APap][Mm])?)\\s?(?:-|\\~)?\\s?(.*?): (.*?)(?=\\n\\d{1,2}/\\d{1,2}/\\d{2,4}, \\d{1,2}:\\d{2}|$)'\n",
     "\n",
     "    messages = re.findall(pattern, content, re.DOTALL)\n",
     "\n",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
