--- a/notebooks/1_DataCleaning.ipynb
+++ b/notebooks/1_DataCleaning.ipynb
@@ -11,52 +11,72 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will read the `.txt` files line by line and apply these filters:  \n",
+    "We read the `.txt` files line by line and apply the following filters:\n",
     "\n",
     "1. **Remove lines containing a WhatsApp encryption notice**  \n",
     "   - ❌ **Before:** `dd/mm/yyyy, hh:mm - Messages and calls are end-to-end encrypted. No one outside of this chat, not even WhatsApp, can read or listen to them. Tap to learn more.`  \n",
-    "   - ✅ **After:** (Removed)  \n",
+    "   - ✅ **After:** *(Removed)*  \n",
     "\n",
     "2. **Remove lines with `<Media omitted>`**  \n",
     "   - ❌ **Before:** `dd/mm/yyyy, hh:mm - Person: <Media omitted>`  \n",
-    "   - ✅ **After:** (Removed)  \n",
+    "   - ✅ **After:** *(Removed)*  \n",
     "\n",
     "3. **Remove lines containing email addresses**  \n",
     "   - ❌ **Before:** `dd/mm/yyyy, hh:mm - Person: example@gmail.com`  \n",
-    "   - ✅ **After:** (Removed)  \n",
+    "   - ✅ **After:** *(Removed)*  \n",
     "\n",
     "4. **Remove lines containing links**  \n",
     "   - ❌ **Before:** `dd/mm/yyyy, hh:mm - Person: https://www.example.com/`  \n",
-    "   - ✅ **After:** (Removed)  \n",
+    "   - ✅ **After:** *(Removed)*  \n",
     "\n",
-    "5. **Replace `<This message was edited>` with an empty string**\n",
-    "   - ❌ **Before:** `dd/mm/yyyy, hh:mm - Person: hey, how are you? <This message was edited>`\n",
+    "5. **Replace `<This message was edited>` with an empty string**  \n",
+    "   - ❌ **Before:** `dd/mm/yyyy, hh:mm - Person: hey, how are you? <This message was edited>`  \n",
     "   - ✅ **After:** `dd/mm/yyyy, hh:mm - Person: hey, how are you?`\n",
     "\n",
     "6. **Remove lines with the text `You deleted this message`**  \n",
     "   - ❌ **Before:** `dd/mm/yyyy, hh:mm - Person: You deleted this message`  \n",
-    "   - ✅ **After:** (Removed)  \n",
+    "   - ✅ **After:** *(Removed)*  \n",
     "\n",
     "7. **Remove lines with the text `null`**  \n",
     "   - ❌ **Before:** `dd/mm/yyyy, hh:mm - Person: null`  \n",
-    "   - ✅ **After:** (Removed)  \n",
+    "   - ✅ **After:** *(Removed)*  \n",
     "\n",
     "8. **Remove lines with the text `created group`**  \n",
     "   - ❌ **Before:** `dd/mm/yyyy, hh:mm - Person created group \"group name\"`  \n",
-    "   - ✅ **After:** (Removed)  \n",
+    "   - ✅ **After:** *(Removed)*  \n",
     "\n",
     "9. **Remove lines with the text `added you`**  \n",
     "   - ❌ **Before:** `dd/mm/yyyy, hh:mm - Person added you`  \n",
-    "   - ✅ **After:** (Removed)  \n",
+    "   - ✅ **After:** *(Removed)*  \n",
     "\n",
     "10. **Replace tagging (`@person`) with an empty string**  \n",
     "   - ❌ **Before:** `dd/mm/yyyy, hh:mm - Person: @person are you coming?`  \n",
-    "   - ✅ **After:** `dd/mm/yyyy, hh:mm - Person: are you coming?`  "
+    "   - ✅ **After:** `dd/mm/yyyy, hh:mm - Person: are you coming?`  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Normalization (Post-filtering)\n",
+    "\n",
+    "Once filtered, we normalize the content:\n",
+    "\n",
+    "1. **Replace narrow no-break spaces**  \n",
+    "   - Used in iOS exports: `\\u202f` → replaced with regular space `\" \"`.\n",
+    "\n",
+    "2. **Strip square brackets around timestamps (iOS format only)**  \n",
+    "   - Example:  \n",
+    "     - ❌ `[dd/mm/yyyy, hh:mm AM/PM]` → ✅ `dd/mm/yyyy, hh:mm AM/PM`\n",
+    "\n",
+    "3. **Remove invisible Unicode characters**  \n",
+    "   - `\\u200E` (Left-to-Right Mark), `\\u200F` (Right-to-Left Mark)\n",
+    "\n",
+    "---\n",
+    "\n",
+    "This preprocessing ensures consistency in timestamp parsing and regex operations across both iOS and Android WhatsApp export formats."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,16 +117,16 @@
     "            filtered_lines.append(line)\n",
     "\n",
     "    # Normalize content:\n",
-    "    # 1. Remove any square brackets around timestamps (for iOS exports)\n",
-    "    # 2. Replace narrow no-break space (used in iOS exports) with a regular space\n",
-    "    # 3. Remove Left-to-Right Mark (LRM) and Right-to-Left Mark (RTM) invisible characters\n",
     "    content = '\\n'.join(filtered_lines)\n",
     "    content = content.replace('\\u202f', ' ')  # Replace narrow no-break space (iOS specific)\n",
-    "    content = content.replace('[', '').replace(']', '')  # Remove square brackets (iOS specific)\n",
-    "    content = content.replace('\\u200E', '').replace('\\u200F', '')  # Remove LRM and RTM characters\n",
+    "    content = re.sub(\n",
+    "        r'\\[(\\d{1,2}/\\d{1,2}/\\d{2,4}, \\d{1,2}:\\d{2}(?::\\d{2})?\\s?[APap][Mm])\\]',\n",
+    "        r'\\1',\n",
+    "        content\n",
+    "    )\n",
+    "    content = content.replace('\\u200E', '').replace('\\u200F', '')  # Remove LRM and RLM characters\n",
     "\n",
-    "    # Updated regular expression to match both iOS and Android WhatsApp formats\n",
-    "    # Now includes optional tilde (~) and handles extra spaces after the tilde\n",
+    "    # Updated regex pattern to match both iOS and Android WhatsApp exports.\n",
     "    pattern = r'(\\d{1,2}/\\d{1,2}/\\d{2,4}, \\d{1,2}:\\d{2}(?::\\d{2})?(?:\\s?[APap][Mm])?)\\s?(?:-|\\~)?\\s?(.*?): (.*?)(?=\\n\\d{1,2}/\\d{1,2}/\\d{2,4}, \\d{1,2}:\\d{2}|$)'\n",
     "\n",
     "    messages = re.findall(pattern, content, re.DOTALL)\n",
@@ -116,7 +136,7 @@
     "    timestamps = []\n",
     "    for timestamp in df['timestamp']:\n",
     "        try:\n",
-    "            timestamp = pd.to_datetime(timestamp, dayfirst=True, errors='coerce')\n",
+    "            timestamp = pd.to_datetime(timestamp, format='mixed', errors='coerce')\n",
     "        except Exception as e:\n",
     "            print(f\"Error parsing timestamp '{timestamp}': {e}\")\n",
     "            timestamp = pd.NaT\n",
@@ -135,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,20 +184,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1345016"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "text_sequence = \"\"\n",
     "for file_name in all_chats.keys():\n",
@@ -188,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
